# notes

./: Cargo.toml  notes.service
src/: main.rs  styles.css  uri.rs
