[package]
name = "note"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
mime_guess = "2.0.5"
pulldown-cmark = "0.12.2"
rinja = "0.3.5"
serde = { version = "1.0.217", features = ["derive"] }
syntect = "5.2.0"
thiserror = "2.0.11"
tiny_http = "0.12.0"
toml = "0.8.19"
