[package]
name = "notes"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = false
codegen-units = 1
strip = true
lto = "fat"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dirs = "6.0.0"
env_logger = "0.11.6"
log = "0.4.25"
mime_guess = "2.0.5"
pulldown-cmark = "0.13"
rinja = "0.3.5"
serde = { version = "1.0.217", features = ["derive"] }
signal-hook = "0.3.17"
syntect = "5.2.0"
thiserror = "2.0.11"
tiny_http = "0.12.0"
toml = "0.8.19"
